--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -164,7 +164,8 @@
             'cpRolesSelection': "{{path("cp_roles_selection", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'cpRoleProfile': "{{path("cp_role_profile", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'cpRoleDeletion': "{{path("cp_role_deletion", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpSettings': "{{path("cp_settings", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}"
+            'cpSettingsModify': "{{path("cp_settings_modify", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpSettingsLanguageManage': "{{path("cp_settings_language_manage", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}"
         };
         
         var text = {
@@ -173,8 +174,8 @@
             'abort': "{{"index_5"|trans}}",
             'ajaxConnectionError': "{{"index_6"|trans}}",
             'ajaxInProgress': "{{"index_7"|trans}}",
-            'changePageLanguage': "{{"index_8"|trans}}",
-            'changeSettingReload': "{{"index_9"|trans}}",
+            'changeReload': "{{"index_8"|trans}}",
+            'changePageLanguage': "{{"index_9"|trans}}",
             'deletePayment': "{{"index_10"|trans}}",
             'deleteAllPayments': "{{"index_11"|trans}}",
             'deletePage': "{{"index_12"|trans}}",
@@ -185,6 +186,7 @@
             'deleteAllModules': "{{"index_17"|trans}}",
             'deleteRole': "{{"index_18"|trans}}",
             'deleteAllRoles': "{{"index_19"|trans}}",
+            'deleteLanguageManage': "{{"index_20"|trans}}"
         };
         
         var settings = {
