Code - Work in progress

--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/table.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/table.html.twig
@@ -1,4 +1,4 @@
-<div class="buttons margin_bottom">
+<div class="buttons margin_bottom display_none">
     <button class="btn btn-primary refresh">Refresh</button>
     <button class="btn btn-danger delete_all">Delete all</button>
 </div>
