--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile.html.twig
@@ -4,48 +4,53 @@
     <div class="col-md-5">
         <h3>{% trans %}profile_1{% endtrans %}</h3>
         <form id="form_cp_profile" action="{{path("cp_profile", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            {% if is_granted("ROLE_ADMIN") == true %}
-                <div class="form-group">
-                    {{form_label(form.username, "profile_2")}}
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-paw"></i></span>
-                        {{form_errors(form.username)}}
-                        {{form_widget(form.username)}}
+            <fieldset class="accordion_container">
+                <legend class="title"><i class="fa fa-chevron-circle-down icon"></i> {% trans %}profile_2{% endtrans %}</legend>
+                <div class="content">
+                    {% if is_granted("ROLE_ADMIN") == true %}
+                        <div class="form-group">
+                            {{form_label(form.username, "profile_3")}}
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-paw"></i></span>
+                                {{form_errors(form.username)}}
+                                {{form_widget(form.username)}}
+                            </div>
+                        </div>
+                    {% endif %}
+
+                    {{form_row(form.name, {'label': "profile_4"})}}
+                    {{form_row(form.surname, {'label': "profile_5"})}}
+
+                    <div class="form-group">
+                        {{form_label(form.email, "profile_6")}}
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                            {{form_errors(form.email)}}
+                            {{form_widget(form.email)}}
+                        </div>
                     </div>
+
+                    {{form_row(form.telephone, {'label': "profile_7"})}}
+                    {{form_row(form.born, {'label': "profile_8"})}}
+                    {{form_row(form.gender, {'label': "profile_9"})}}
+
+                    {% if (form.fiscalCode.vars.value != "") %}
+                        {{form_row(form.fiscalCode, {'label': "profile_10"})}}
+                        {{form_row(form.companyName, {'label': "profile_11"})}}
+                        {{form_row(form.companyCode, {'label': "profile_12"})}}
+                    {% endif %}
+
+                    {{form_row(form.website, {'label': "profile_13"})}}
+                    {{form_row(form.state, {'label': "profile_14"})}}
+                    {{form_row(form.city, {'label': "profile_15"})}}
+                    {{form_row(form.zip, {'label': "profile_16"})}}
+                    {{form_row(form.address, {'label': "profile_17"})}}
+
+                    {{form_widget(form.token)}}
+
+                    <input class="btn btn-primary margin_bottom" type="submit" value="{% trans %}button_3{% endtrans %}"/>
                 </div>
-            {% endif %}
-            
-            {{form_row(form.name, {'label': "profile_3"})}}
-            {{form_row(form.surname, {'label': "profile_4"})}}
-            
-            <div class="form-group">
-                {{form_label(form.email, "profile_5")}}
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-                    {{form_errors(form.email)}}
-                    {{form_widget(form.email)}}
-                </div>
-            </div>
-            
-            {{form_row(form.telephone, {'label': "profile_6"})}}
-            {{form_row(form.born, {'label': "profile_7"})}}
-            {{form_row(form.gender, {'label': "profile_8"})}}
-
-            {% if (form.fiscalCode.vars.value != "") %}
-                {{form_row(form.fiscalCode, {'label': "profile_9"})}}
-                {{form_row(form.companyName, {'label': "profile_10"})}}
-                {{form_row(form.companyCode, {'label': "profile_11"})}}
-            {% endif %}
-
-            {{form_row(form.website, {'label': "profile_12"})}}
-            {{form_row(form.state, {'label': "profile_13"})}}
-            {{form_row(form.city, {'label': "profile_14"})}}
-            {{form_row(form.zip, {'label': "profile_15"})}}
-            {{form_row(form.address, {'label': "profile_16"})}}
-
-            {{form_widget(form.token)}}
-
-            <input class="btn btn-primary" type="submit" value="{% trans %}button_3{% endtrans %}"/>
+            </fieldset>
         </form>
     </div>
 </div>
