--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/settings.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/settings.html.twig
@@ -52,14 +52,16 @@
 
                     {{form_row(form.https, {'label': "settings_10"})}}
                     {{form_row(form.registrationUserConfirmAdmin, {'label': "settings_11"})}}
+                    {{form_row(form.loginAttempt, {'label': "settings_12"})}}
+                    {{form_row(form.loginAttemptCount, {'label': "settings_13"})}}
                 </div>
             </fieldset>
             
             <fieldset class="accordion_container">
-                <legend class="title"><i class="fa fa-chevron-circle-down icon"></i> {% trans %}settings_12{% endtrans %}</legend>
+                <legend class="title"><i class="fa fa-chevron-circle-down icon"></i> {% trans %}settings_14{% endtrans %}</legend>
                 <div class="content">
                     <div class="form-group">
-                        {{form_label(form.payPalSandbox, "settings_13")}}
+                        {{form_label(form.payPalSandbox, "settings_15")}}
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
                             {{form_errors(form.payPalSandbox)}}
@@ -68,7 +70,7 @@
                     </div>
 
                     <div class="form-group">
-                        {{form_label(form.payPalBusiness, "settings_14")}}
+                        {{form_label(form.payPalBusiness, "settings_16")}}
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
                             {{form_errors(form.payPalBusiness)}}
@@ -77,7 +79,7 @@
                     </div>
 
                     <div class="form-group">
-                        {{form_label(form.payPalCurrencyCode, "settings_15")}}
+                        {{form_label(form.payPalCurrencyCode, "settings_17")}}
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
                             {{form_errors(form.payPalCurrencyCode)}}
@@ -86,7 +88,7 @@
                     </div>
 
                     <div class="form-group">
-                        {{form_label(form.payPalCreditAmount, "settings_16")}}
+                        {{form_label(form.payPalCreditAmount, "settings_18")}}
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
                             {{form_errors(form.payPalCreditAmount)}}
@@ -97,9 +99,9 @@
             </fieldset>
             
             <fieldset class="accordion_container">
-                <legend class="title"><i class="fa fa-chevron-circle-down icon"></i> {% trans %}settings_17{% endtrans %}</legend>
+                <legend class="title"><i class="fa fa-chevron-circle-down icon"></i> {% trans %}settings_19{% endtrans %}</legend>
                 <div class="content">
-                    {{form_row(form.credits, {'label': "settings_18"})}}
+                    {{form_row(form.credits, {'label': "settings_20"})}}
                 </div>
             </fieldset>
 
