--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/settings.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/settings.html.twig
@@ -52,7 +52,7 @@
 
                     {{form_row(form.https, {'label': "settings_10"})}}
                     {{form_row(form.registrationUserConfirmAdmin, {'label': "settings_11"})}}
-                    {{form_row(form.loginAttempt, {'label': "settings_12"})}}
+                    {{form_row(form.loginAttemptTime, {'label': "settings_12"})}}
                     {{form_row(form.loginAttemptCount, {'label': "settings_13"})}}
                 </div>
             </fieldset>
