--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/settings.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/settings.html.twig
@@ -54,14 +54,15 @@
                     {{form_row(form.registrationUserConfirmAdmin, {'label': "settings_11"})}}
                     {{form_row(form.loginAttemptTime, {'label': "settings_12"})}}
                     {{form_row(form.loginAttemptCount, {'label': "settings_13"})}}
+                    {{form_row(form.captcha, {'label': "settings_14"})}}
                 </div>
             </fieldset>
             
             <fieldset class="accordion_container">
-                <legend class="title"><i class="fa fa-chevron-circle-down icon"></i> {% trans %}settings_14{% endtrans %}</legend>
+                <legend class="title"><i class="fa fa-chevron-circle-down icon"></i> {% trans %}settings_15{% endtrans %}</legend>
                 <div class="content">
                     <div class="form-group">
-                        {{form_label(form.payPalSandbox, "settings_15")}}
+                        {{form_label(form.payPalSandbox, "settings_16")}}
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
                             {{form_errors(form.payPalSandbox)}}
@@ -70,7 +71,7 @@
                     </div>
 
                     <div class="form-group">
-                        {{form_label(form.payPalBusiness, "settings_16")}}
+                        {{form_label(form.payPalBusiness, "settings_17")}}
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
                             {{form_errors(form.payPalBusiness)}}
@@ -79,7 +80,7 @@
                     </div>
 
                     <div class="form-group">
-                        {{form_label(form.payPalCurrencyCode, "settings_17")}}
+                        {{form_label(form.payPalCurrencyCode, "settings_18")}}
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
                             {{form_errors(form.payPalCurrencyCode)}}
@@ -88,7 +89,7 @@
                     </div>
 
                     <div class="form-group">
-                        {{form_label(form.payPalCreditAmount, "settings_18")}}
+                        {{form_label(form.payPalCreditAmount, "settings_19")}}
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-paypal"></i></span>
                             {{form_errors(form.payPalCreditAmount)}}
@@ -99,9 +100,9 @@
             </fieldset>
             
             <fieldset class="accordion_container">
-                <legend class="title"><i class="fa fa-chevron-circle-down icon"></i> {% trans %}settings_19{% endtrans %}</legend>
+                <legend class="title"><i class="fa fa-chevron-circle-down icon"></i> {% trans %}settings_20{% endtrans %}</legend>
                 <div class="content">
-                    {{form_row(form.credits, {'label': "settings_20"})}}
+                    {{form_row(form.credits, {'label': "settings_21"})}}
                 </div>
             </fieldset>
 
