--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -211,6 +211,7 @@
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/FlashBag.js")}}"></script>
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/PopupEasy.js")}}"></script>
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/Table.js")}}"></script>
+    <script type="text/javascript" src="{{asset("bundles/uebusaito/js/Captcha.js")}}"></script>
     
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/Language.js")}}"></script>
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/Search.js")}}"></script>
