--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/utility.scss
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/utility.scss
@@ -274,6 +274,18 @@ legend {
     z-index: 1001;
 }
 
+.captcha {
+    text-align: center;
+    margin-bottom: 10px;
+    
+    img {
+        border: 1px solid #000000;
+    }
+    .icon {
+        cursor: pointer;
+    }
+}
+
 #backdrop {
     position: fixed;
     top: 0;
