--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/captcha.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/captcha.html.twig
@@ -1,5 +1,7 @@
-<div class="captcha">
-    <i class="fa fa-retweet icon"></i>
-    <img src="data:image/png;base64,{{ captcha }}" alt="Captcha image"/>
-    <input type="text" name="captcha" value="" size="7" maxlength="7"/>
-</div>
+{% if settings.captcha == true %}
+    <div class="captcha">
+        <i class="fa fa-retweet icon"></i>
+        <img src="data:image/png;base64,{{ captchaImage }}" alt="Captcha image"/>
+        <input type="text" name="captcha" value="" size="7" maxlength="7"/>
+    </div>
+{% endif %}
