--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/utility.scss
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/utility.scss
@@ -278,11 +278,17 @@ legend {
     text-align: center;
     margin-bottom: 10px;
     
+    .icon {
+        position: relative;
+        top: 2px;
+        cursor: pointer;
+    }
     img {
         border: 1px solid #000000;
     }
-    .icon {
-        cursor: pointer;
+    input {
+        position: relative;
+        top: 1px;
     }
 }
 
