--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_creation.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_creation.html.twig
@@ -34,7 +34,7 @@
             {{form_row(form.onlyLink, {'label': "page_creation_10"})}}
             {{form_row(form.link, {'label': "page_creation_11"})}}
 
-            {{form_widget(form.token)}}
+            {{form_widget(form._token)}}
 
             <input class="btn btn-primary" type="submit" value="{% trans %}button_1{% endtrans %}"/>
         </form>
