--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
@@ -38,7 +38,7 @@
             {{form_row(form.onlyLink, {'label': "page_profile_11"})}}
             {{form_row(form.link, {'label': "page_profile_12"})}}
 
-            {{form_widget(form.token)}}
+            {{form_widget(form._token)}}
 
             <input class="btn btn-primary" type="submit" value="{% trans %}button_3{% endtrans %}"/>
         </form>
