--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_credits.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_credits.html.twig
@@ -18,7 +18,7 @@
                         </div>
                     </div>
 
-                    {{form_widget(form.token)}}
+                    {{form_widget(form._token)}}
 
                     <input class="button_payPal margin_bottom" type="submit" value=""/>
                 </div>
