--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/search_words.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/search_words.html.twig
@@ -17,7 +17,7 @@
             </div>
             {{form_row(form.words, {'label': false})}}
             
-            {{form_widget(form.token)}}
+            {{form_widget(form._token)}}
         </form>
     </div>
 {% endblock %}
