--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
@@ -14,7 +14,7 @@
                     </div>
                 </div>
 
-                {{form_widget(form.token)}}
+                {{form_widget(form._token)}}
 
                 <input class="btn btn-primary" type="submit" value="{% trans %}button_4{% endtrans %}"/>
             </form>
@@ -39,7 +39,7 @@
                     </div>
                 </div>
 
-                {{form_widget(form.token)}}
+                {{form_widget(form._token)}}
 
                 <input class="btn btn-primary" type="submit" value="{% trans %}button_4{% endtrans %}"/>
             </form>
