--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/modules_drag.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/modules_drag.html.twig
@@ -12,7 +12,7 @@
             {{form_widget(form.sortCenter, {'label': "modules_drag_4"})}}
             {{form_widget(form.sortRight, {'label': "modules_drag_5"})}}
             
-            {{form_widget(form.token)}}
+            {{form_widget(form._token)}}
         </form>
     </div>
 </div>
