--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payments_user_selection.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payments_user_selection.html.twig
@@ -6,7 +6,7 @@
         <form id="form_cp_payments_user_selection" action="{{path("cp_payments_user_selection", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form.userId, {'label': "payments_user_selection_2"})}}
 
-            {{form_widget(form.token)}}
+            {{form_widget(form._token)}}
 
             <input class="btn btn-primary" type="submit" value="{% trans %}button_4{% endtrans %}"/>
         </form>
