--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_password.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_password.html.twig
@@ -34,7 +34,7 @@
                         </div>
                     </div>
 
-                    {{form_widget(form.token)}}
+                    {{form_widget(form._token)}}
 
                     <input class="btn btn-primary margin_bottom" type="submit" value="{% trans %}button_3{% endtrans %}"/>
                 </div>
