--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/role_profile.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/role_profile.html.twig
@@ -13,7 +13,7 @@
                 </div>
             </div>
             
-            {{form_widget(form.token)}}
+            {{form_widget(form._token)}}
 
             <input class="btn btn-primary" type="submit" value="{% trans %}button_3{% endtrans %}"/>
         </form>
