--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roles_selection.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roles_selection.html.twig
@@ -14,7 +14,7 @@
             <form id="form_cp_roles_selection" action="{{path("cp_roles_selection", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
                 {{form_row(form.id, {'label': "roles_selection_2"})}}
 
-                {{form_widget(form.token)}}
+                {{form_widget(form._token)}}
 
                 <input class="btn btn-primary" type="submit" value="{% trans %}button_4{% endtrans %}"/>
             </form>
