--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/settings.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/settings.html.twig
@@ -106,7 +106,7 @@
                 </div>
             </fieldset>
 
-            {{form_widget(form.token)}}
+            {{form_widget(form._token)}}
 
             <input class="btn btn-primary" type="submit" value="{% trans %}button_3{% endtrans %}"/>
         </form>
