--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_creation.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_creation.html.twig
@@ -43,7 +43,7 @@
 
             {{form_row(form.fiscalCode, {'label': "user_creation_10"})}}
             {{form_row(form.companyName, {'label': "user_creation_11"})}}
-            {{form_row(form.companyCode, {'label': "user_creation_12"})}}
+            {{form_row(form.vat, {'label': "user_creation_12"})}}
 
             {{form_row(form.website, {'label': "user_creation_13"})}}
             {{form_row(form.state, {'label': "user_creation_14"})}}
@@ -69,7 +69,7 @@
                 </div>
             </div>
             
-            {{form_widget(form.token)}}
+            {{form_widget(form._token)}}
             
             <input class="btn btn-primary" type="submit" value="{% trans %}button_1{% endtrans %}"/>
         </form>
