--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/language_page.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/language_page.html.twig
@@ -7,6 +7,6 @@
     <form id="form_language_page" action="{{path("language_page", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
         {{form_row(form.codePage)}}
 
-        {{form_widget(form.token)}}
+        {{form_widget(form._token)}}
     </form>
 </div>
