--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
@@ -46,7 +46,7 @@
                 
                 {{-include("UebusaitoBundle::include/captcha.html.twig")-}}
                     
-                {{form_widget(form.token)}}
+                {{form_widget(form._token)}}
             </form>
             
             <div class="horizontal_center">
